improve cards, added images

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "material-symbols": "^0.29.2",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
